Updated Dockerfile contents as of 2026-02-17 05:35:28